--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-04-25 11:23+0200\n"
+"POT-Creation-Date: 2023-05-24 14:33+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -69,11 +69,11 @@ msgstr ""
 msgid "Custom Material Settings"
 msgstr ""
 
-#: octoprint_mrbeam/__init__.py:2432
+#: octoprint_mrbeam/__init__.py:2447
 msgid "A new picture is being taken, please wait a little..."
 msgstr ""
 
-#: octoprint_mrbeam/__init__.py:2437
+#: octoprint_mrbeam/__init__.py:2452
 msgid "Either the camera is busy or the lid is not open."
 msgstr ""
 
@@ -120,8 +120,8 @@ msgstr ""
 msgid "...and more!"
 msgstr ""
 
-#: octoprint_mrbeam/printing/comm_acc2.py:426
-#: octoprint_mrbeam/printing/comm_acc2.py:485
+#: octoprint_mrbeam/printing/comm_acc2.py:429
+#: octoprint_mrbeam/printing/comm_acc2.py:488
 msgid "Please contact Mr Beam support team and attach octoprint.log."
 msgstr ""
 
@@ -162,7 +162,7 @@ msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/convert.js:502
 #: octoprint_mrbeam/static/js/app/view-models/convert.js:547
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1801
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1810
 #: octoprint_mrbeam/static/js/app/view-models/wizard/wizard-analytics.js:79
 #: octoprint_mrbeam/static/js/app/view-models/wizard/wizard-gcode-deletion.js:41
 msgid "Error while saving settings!"
@@ -220,46 +220,46 @@ msgid ""
 "dropping it in the bottom section."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1803
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1812
 #, python-format
 msgid ""
 "Unable to save your focus reminder state at the moment.%(br)sCheck "
 "connection to Mr Beam and try again."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1857
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1866
 msgid "There is nothing to laser, all jobs are set to be skipped."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1868
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1877
 msgid "engraved"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1871
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1880
 msgid "cut"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1875
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1884
 #: octoprint_mrbeam/templates/quick_text.jinja2:4
 msgid "Quick Text"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1877
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1886
 msgid "selected design"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1882
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1891
 #, python-format
 msgid ""
 "Sorry but the %(designType)s can only be %(laserJob)s, which is not "
 "supported for this material."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1967
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1976
 msgid "Conversion failed"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1969
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1978
 #, python-format
 msgid ""
 "Unable to start the conversion in the backend. Please try reloading this "
@@ -267,50 +267,50 @@ msgid ""
 "bytes."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1984
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1993
 msgid "Parameter missing"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:1985
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:1994
 msgid "Unable to start conversion because a parameter is missing."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:2182
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:2191
 msgid ""
 "To free up some disk space you may want to perform one or all of the "
 "following suggestions:"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:2188
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:2197
 msgid ""
 "Delete GCode files: Go to design library and click 'Only show GCode "
 "files' on the left. Here you can delete files from the according context "
 "menu."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:2194
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:2203
 msgid ""
 "Delete design files: Go to design library and click 'Only show design "
 "files' on the left. Here you can delete files from the according context "
 "menu."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:2200
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:2209
 msgid ""
 "Delete log files: Go to Settings -> logs and delete old log files per "
 "click on the trash bin icon."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:2206
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:2215
 #, python-format
 msgid "Find more details %(open)sonline%(close)s."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:2213
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:2222
 msgid "Get more free disk space"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/convert.js:2486
+#: octoprint_mrbeam/static/js/app/view-models/convert.js:2495
 #: octoprint_mrbeam/templates/conversion_dialog.jinja2:515
 msgid "Cut "
 msgstr ""
@@ -469,7 +469,7 @@ msgid ""
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/mrbeam.js:586
-msgid "Beta user: Please consider enabling Mr Beam analytics!"
+msgid "Beta user: Please consider enabling Mr Beam Better Together!"
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/mrbeam.js:590
@@ -478,7 +478,7 @@ msgid ""
 "As you are currently in our Beta channel, you would help us tremendously "
 "sharing%(br)sthe laser job insights, so we can improve%(br)san overall "
 "experience working with the%(br)s Mr Beam. Thank you!%(br)s%(open)sGo to "
-"analytics settings%(close)s"
+"Better Together settings%(close)s"
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/review.js:236
@@ -793,109 +793,230 @@ msgstr ""
 msgid "Close"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:11
-msgid "No laser head unit found"
-msgstr ""
-
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:12
-msgid ""
-"Laser head unit not found. Please make sure that the laser head unit is "
-"connected correctly."
-msgstr ""
-
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:22
-msgid "Bottom Plate Error"
-msgstr ""
-
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:23
-msgid ""
-"The bottom plate is not closed correctly. Please make sure that the "
-"bottom is correctly mounted as described in the Mr Beam user manual."
-msgstr ""
-
 #: octoprint_mrbeam/static/js/app/view-models/user-notification.js:33
-msgid "Hardware malfunction"
+msgid "Laserhead unit missing"
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/user-notification.js:34
-msgid "A possible hardware malfunction has been detected on this device. "
+#, python-format
+msgid ""
+"The device is currently not able to start any laser job.\n"
+"\n"
+"Only disconnect or connect the laserhead unit if device is not powered "
+"on!\n"
+"\n"
+"Please shutdown the device and check the connection to the laserhead "
+"following this %(opening_tag)sKnowledgebase article%(closing_tag)s.\n"
+"\n"
+"If this doesn’t solve the problem, please open a support ticket."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:44
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:43
+msgid "https://mr-beam.freshdesk.com/en/"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:49
+msgid "Bottom plate not detected"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:50
+#, python-format
+msgid ""
+"The device is currently not able to start any laser job.\n"
+"\n"
+"Please make sure that the bottom is correctly mounted as described in the"
+" %(opening_tag)sKnowledgebase article%(closing_tag)s.\n"
+"\n"
+"If this doesn’t solve the problem, please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:66
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:200
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:210
+msgid "Hardware malfunction"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:67
+#, python-format
+msgid ""
+"The device is currently not able to start any laser job.\n"
+"\n"
+"Please shutdown the device and check the ribbon cable following the "
+"%(opening_tag)sKnowledgebase article%(closing_tag)s.\n"
+"\n"
+"If this doesn’t solve the problem, please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:83
+msgid "Compressor malfunction"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:84
+#, python-format
+msgid ""
+"The device is currently not able to start any laser job.\n"
+"\n"
+"Please check the piping in the working area by following the "
+"%(opening_tag)sKnowledgebase article%(closing_tag)s. And restart the "
+"device.\n"
+"\n"
+"If this doesn’t solve the problem, please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:100
+msgid "One Button malfunction"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:101
+msgid ""
+"The device is currently not able to start any laser job.\n"
+"\n"
+"You can still shut down the device via the Mr Beam Software.\n"
+"\n"
+"Please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:112
+msgid "Interlock malfunction"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:113
+#, python-format
+msgid ""
+"The device is currently not able to start any laser job.\n"
+"\n"
+"Please check the lid switch following the %(opening_tag)sKnowledgebase "
+"article%(closing_tag)s.\n"
+"\n"
+"If this doesn’t solve the problem, please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:129
 msgid "Camera busy"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:45
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:130
 msgid "The camera was stopped recently, it will take a few seconds to restart."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:52
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:137
 msgid "No update information"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:53
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:138
 msgid ""
 "No information about available updates could be retrieved, please try "
 "again later. Errorcode: E-1000"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:60
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:68
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:145
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:153
 msgid "Error during fetching update information"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:61
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:146
 msgid "There was a error during fetching the update information Errorcode: E-1001"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:69
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:154
 msgid ""
 "There was a error during fetching the update information, please try "
 "again later."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:76
-msgid "Camera Error"
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:161
+msgid "Camera malfunction"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:77
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:162
+#, python-format
 msgid ""
-"The camera has had a small issue, please restart your Mr Beam if you need"
-" to use the camera to continue with your work."
+"You can still use the device by aligning manually without camera support."
+" See %(opening_tag)sKnowledgebase article%(closing_tag)s.\n"
+"\n"
+"Please try to restart the device. \n"
+"\n"
+"If this doesn’t solve the problem, you may open a support ticket."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:87
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:178
+msgid "Critical Hardware error"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:179
+msgid ""
+"The system detected a critical hardware error. Please contact Mr Beam "
+"support."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:187
+msgid "Laser job canceled"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:188
+msgid ""
+"The job was canceled due to an error - we apologize for any "
+"inconvenience.\n"
+"\n"
+"Please try to restart the device.\n"
+"\n"
+"If this doesn’t solve the problem, please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:201
+msgid ""
+"The device is currently not able to start any laser job.\n"
+"\n"
+"Please try to restart the device.\n"
+"\n"
+"If this doesn’t solve the problem, please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:211
+msgid ""
+"Your Air Filter or single Fan is not spinning properly.\n"
+"\n"
+"The device is currently not able to start any laser job.\n"
+"\n"
+"Please open a support ticket."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:220
 msgid "Thank you"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:88
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:221
 msgid ""
 "The last image from your camera was submitted to Mr Beam and is going to "
 "be uploaded silently in the background."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:94
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:227
 msgid "Lens Calibration Over"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:95
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:228
 msgid "A new lens calibration file has been created and is now being used."
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:173
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:321
 #, python-format
 msgid ""
 "For more information check out this %(opening_tag)sKnowledge Base "
 "article%(closing_tag)s"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:190
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:338
 #, python-format
 msgid "Browse our %(opening_tag)sKnowledge Base%(closing_tag)s"
 msgstr ""
 
-#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:210
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:358
 msgid "Error:"
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/user-notification.js:372
+msgid "Error Code:"
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/working-area.js:154
@@ -4442,9 +4563,7 @@ msgstr ""
 msgid ""
 "We understand that your privacy is crucial, and we want to assure you "
 "that none of the data collected includes your personal information such "
-"as your name, login details, designs, or any other private content. You "
-"are in full control, and you can change your mind at any time by going to"
-" <strong>\"Settings > Better together\"</strong>."
+"as your name, login details, designs, or any other private content."
 msgstr ""
 
 #: octoprint_mrbeam/templates/settings/analytics_settings.jinja2:22
@@ -5044,6 +5163,12 @@ msgstr ""
 
 #: octoprint_mrbeam/templates/wizard/wizard_acl.jinja2:30
 msgid "Confirm Password"
+msgstr ""
+
+#: octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2:15
+msgid ""
+"You are in full control, and you can change your mind at any time by "
+"going to <strong>\"Settings > Better together\"</strong>."
 msgstr ""
 
 #: octoprint_mrbeam/templates/wizard/wizard_connection.jinja2:6
