--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2023-04-25 10:57+0200\n"
-"PO-Revision-Date: 2023-04-25 10:58+0200\n"
+"PO-Revision-Date: 2023-06-22 13:24+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -1684,7 +1684,7 @@ msgid ""
 "line distance 0,1mm for the best result."
 msgstr ""
 "Gravuren auf Edelstahl funktionieren nur mit unserm “Mark Solid” Laser "
-"Markierungsspray. Verwende einen Linienabstand von 0,1mm für ein optimales "
+"Markierspray. Verwende einen Linienabstand von 0,1mm für ein optimales "
 "Ergebnis."
 
 #: octoprint_mrbeam/static/js/app/view-models/modal/material-settings.js:464
@@ -1692,8 +1692,8 @@ msgid ""
 "Do not engrave stainless steel without the application of laser marking "
 "color."
 msgstr ""
-"Edelstahl nicht blank gravieren, sonder immer in Verbindung mit unserem "
-"Markierugsspay."
+"Edelstahl nicht blank gravieren, sondern immer in Verbindung mit unserem "
+"Markierspray."
 
 #: octoprint_mrbeam/static/js/app/view-models/modal/ready-to-laser.js:246
 msgid "minute"
@@ -4510,7 +4510,7 @@ msgstr "duplizieren"
 
 #: octoprint_mrbeam/templates/tab_workingarea.jinja2:430
 msgid "split"
-msgstr "zerteilten"
+msgstr "zerteilen"
 
 #: octoprint_mrbeam/templates/tab_workingarea.jinja2:433
 msgid "by stroke color"
