--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2023-08-04 11:05+0200\n"
-"PO-Revision-Date: 2023-08-04 11:18+0200\n"
+"PO-Revision-Date: 2023-08-04 11:31+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -4471,14 +4471,14 @@ msgid ""
 "accurate (including cutting aids or the Mr Beam Height Extension). For more "
 "information on the working-height, see "
 msgstr ""
-"Stell die Höhe, in der du lasern möchtest, so ein, dass die Kameravorschau "
-"genau ist (einschließlich Schneidhilfen oder der Mr Beam Height Extension). "
-"Für weitere Informationen über die Arbeitshöhe, siehe"
+"Stelle hier die Höhe ein, auf der gelasert werden soll, damit die "
+"Kameravorschau genau ist (Inklusive Schneidhilfen oder der Mr Beam Height "
+"Extension). Genauere Informationen zur Arbeitshöhe findest du"
 
 #: octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2:17
 #: octoprint_mrbeam/templates/tab_workingarea.jinja2:156
 msgid "this Knowledge Base article"
-msgstr "dieser Knowledge Base Artikel"
+msgstr "In diesem Wissensdatenbank-Artikel"
 
 #: octoprint_mrbeam/templates/tab_workingarea.jinja2:183
 msgid "Preview"
@@ -4865,22 +4865,22 @@ msgid ""
 "all four corners between the housing and the Height Extension. For more "
 "information, see "
 msgstr ""
-"Wenn du die Mr Beam Height Extension installiert hast, musst du stattdessen "
-"ein festes Stück Papier verwenden (z. B. Visitenkarten). Steck diese in alle "
-"vier Ecken zwischen dem Gehäuse und der Höhenverlängerung. Für weitere "
-"Informationen, siehe"
+"Wenn du die Mr Beam Height Extension eingebaut hast, musst du stattdessen "
+"ein festes Papier verwenden (zum Beispiel Visitenkarten). Stecke diese in "
+"alle vier Ecken zwischen Gehäuse und Height Extension. Genauere "
+"Informationen dazu findest du"
 
 #: octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2:22
 msgid "Focus the laser head on the material."
-msgstr "Fokussiere den Laserkopf auf das Materials."
+msgstr "Fokussiere den Laserkopf auf das Material."
 
 #: octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2:23
 msgid ""
 "Even with the Height Extension installed, you must focus the laser head on "
 "the paper in the corners."
 msgstr ""
-"Auch mit der installierten Height Extension muss der Laserkopf in den Ecken "
-"auf das Papier fokussieren werden."
+"Auch mit eingebauter Height Extension musst du den Laserkopf auf das Papier "
+"in den Ecken fokussieren."
 
 #: octoprint_mrbeam/templates/calibration/user/view_corner_calibration.jinja2:25
 msgid "Home the laserhead."
@@ -5035,10 +5035,10 @@ msgid ""
 "one of the edges of the workspace, the protective housing will cover parts "
 "of the chessboard). Check this with the help of the camera preview image."
 msgstr ""
-"Wenn du eine Mr Beam Height Extension installiert hast, ist es wichtig, dass "
-"die Kamera das Schachbrett vollständig erfassen kann (wenn du sie zu nahe an "
-"eine der Kanten des Arbeitsbereichs bewegst, verdeckt das Schutzgehäuse "
-"Teile des Schachbretts). Überprüfe dies mit Hilfe des Kameravorschaubildes."
+"Solltest du eine Mr Beam Height Extension verbaut haben, ist es wichtig, "
+"dass die Kamera das Schachbrett vollständig erkennen kann (Schiebst du es zu "
+"nah an eine der Kanten des Arbeitsbereichs, verdeckt das Schutzgehäuse einen "
+"Teil des Schachbretts). Überprüfe dies anhand des Kameravorschaubilds."
 
 #: octoprint_mrbeam/templates/calibration/user/view_lens_calibration.jinja2:35
 msgid ""
@@ -5070,8 +5070,8 @@ msgid ""
 "If the Height Extension is installed, make sure again that the camera can "
 "capture the entire chessboard."
 msgstr ""
-"Wenn die Height Extension installiert ist, vergewissere dich erneut, dass "
-"die Kamera das gesamte Schachbrett erfassen kann."
+"Achte auch hier bei verbauter Height Extension darauf, dass die Kamera das "
+"gesamte Schachbrett erfassen kann."
 
 #: octoprint_mrbeam/templates/calibration/user/view_lens_calibration.jinja2:43
 msgid ""
